--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,22 @@ spring.datasource.driver-class-name = org.sqlite.JDBC
 spring.datasource.username = admin
 spring.datasource.password = admin
 
-# Set log level to log group
+# logging level
+logging.level.org.springframework=ERROR
 logging.level.com.oscarmartinez=DEBUG
+
+# output to a file
+logging.file.name=coreApp.log
+
+# temp folder example
+#logging.file=${java.io.tmpdir}/app.log
+
+logging.pattern.file=%d %p %c{1.} [%t] %m%n
+
+logging.pattern.console=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
+
+## if no active profile, default is 'default'
+##spring.profiles.active=prod
+
+# root level
+#logging.level.=INFO
