--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,6 @@ logging.pattern.console=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
 
 # root level
 #logging.level.=INFO
+
+#USER
+user.dir.storage=/ProyectoFinal/images/
