Actualizacion para token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,7 @@ logging.pattern.console=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
 
 #USER
 user.dir.storage=/ProyectoFinal/images/
+
+#SECURITY
+app.jwtSecret = secretWord
+app.jwtExpiration = 3600
